--- a/client/ui-components/GMENavigator/styles/GMENavigator.scss
+++ b/client/ui-components/GMENavigator/styles/GMENavigator.scss
@@ -1,10 +1,19 @@
 ul.gme-navigator {
 
-  color: #fff;
-  background-color: #000;
+  font-size: 130%;
 
-  li {
-    display: none;
+  padding: 0;
+  list-style-type: none;
+  color: #fff;
+
+  > li {
+    display: inline-block;
+    padding: .75ex 1em;
+  }
+
+  > li:hover {
+    background-color: #00235B;
+    cursor: pointer;
   }
 
   li.selected {
