--- a/client/ui-components/GMENavigator/styles/GMENavigator.scss
+++ b/client/ui-components/GMENavigator/styles/GMENavigator.scss
@@ -9,11 +9,27 @@ ul.gme-navigator {
   > li {
     display: inline-block;
     padding: .75ex 1em;
+
+    position: relative;
+
+    > .dropdown-menu {
+      display: none;
+      position: absolute;
+      margin-bottom: 5px;
+      *width: 180px;
+      margin-top: -2px;
+    }
+
   }
 
   > li:hover {
     background-color: #00235B;
     cursor: pointer;
+
+    > .dropdown-menu {
+      display: block;
+    }
+
   }
 
   li.selected {
@@ -24,5 +40,14 @@ ul.gme-navigator {
     display: inline-block;
   }
 
+  .dropdown-menu {
+    overflow: visible;
+  }
 }
 
+.dropdown-submenu{position:relative;}
+.dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
+.dropdown-submenu:hover>.dropdown-menu{display:block;}
+.dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
+.dropdown-submenu:hover>a:after{border-left-color:#ffffff;}
+.dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}
