--- a/client/ui-components/GMENavigator/templates/GMENavigator.html
+++ b/client/ui-components/GMENavigator/templates/GMENavigator.html
@@ -2,14 +2,45 @@
 
     <script type="text/ng-template"  id="navigator-item-template">
         <span class="item-name">{{item.name}}</span>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li class="divider"></li>
+          <li class="dropdown-submenu">
+            <a tabindex="-1" href="#">More options</a>
+            <ul class="dropdown-menu">
+              <li><a tabindex="-1" href="#">Second level</a></li>
+              <li class="dropdown-submenu">
+                <a href="#">More..</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">3rd level</a></li>
+                    <li><a href="#">3rd level</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Second level</a></li>
+              <li><a href="#">Second level</a></li>
+            </ul>
+          </li>
+        </ul>
+
     </script>
 
     <script type="text/ng-template"  id="branch-selector-template">
         <span class="item-name">Branch {{item.name}}</span>
     </script>
 
-     <li data-ng-repeat="item in selectedItems"
+     <li data-ng-repeat="item in items"
          data-ng-class=" item.itemClass || '' "
          ng-include=" item.itemTemplate || 'navigator-item-template' ">
+
+
+
      </li>
 </ul>
