--- a/client/ui-components/GMENavigator/templates/GMENavigator.html
+++ b/client/ui-components/GMENavigator/templates/GMENavigator.html
@@ -1,46 +1,64 @@
 <ul class="gme-navigator">
 
-    <script type="text/ng-template"  id="navigator-item-template">
-        <span class="item-name">{{item.name}}</span>
-        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="divider"></li>
-          <li class="dropdown-submenu">
-            <a tabindex="-1" href="#">More options</a>
-            <ul class="dropdown-menu">
-              <li><a tabindex="-1" href="#">Second level</a></li>
-              <li class="dropdown-submenu">
-                <a href="#">More..</a>
+    <script type="text/ng-template" id="navigator-item-template">
+        <span class="item-label">{{item.label}}</span>
+        <ul class="dropdown-menu"
+            role="menu"
+            aria-labelledby="dropdownMenu"
+            data-ng-show="item.topActions || item.items || item.bottomActions">
+
+
+            <li data-ng-repeat="topAction in item.topActions">
+                <a href="#">
+                    <i data-ng-show="topAction.iconClass" data-ng-class="topAction.iconClass"></i>
+                    {{topAction.label}}
+                </a>
+            </li>
+            <li ng-if="item.topActions" class="divider"></li>
+
+            <li data-ng-repeat="subItem in item.items">
+                <a href="#">
+                    {{subItem.label}}
+                </a>
+            </li>
+
+            <li>...</li>
+
+            <li ng-if="item.bottomActions" class="divider"></li>
+            <li data-ng-repeat="bottomAction in item.bottomActions">
+                <a href="#">
+                    <i data-ng-show="bottomAction.iconClass" data-ng-class="bottomAction.iconClass"></i>
+                    {{bottomAction.label}}
+                </a>
+            </li>            
+            
+            <li class="dropdown-submenu">
+                <a tabindex="-1" href="#">More options</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">3rd level</a></li>
-                    <li><a href="#">3rd level</a></li>
+                    <li><a tabindex="-1" href="#">Second level</a></li>
+                    <li class="dropdown-submenu">
+                        <a href="#">More..</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">3rd level</a></li>
+                            <li><a href="#">3rd level</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Second level</a></li>
+                    <li><a href="#">Second level</a></li>
                 </ul>
-              </li>
-              <li><a href="#">Second level</a></li>
-              <li><a href="#">Second level</a></li>
-            </ul>
-          </li>
+            </li>
         </ul>
 
     </script>
 
-    <script type="text/ng-template"  id="branch-selector-template">
-        <span class="item-name">Branch {{item.name}}</span>
+    <script type="text/ng-template" id="branch-selector-template">
+        <span class="item-label">Branch {{item.label}}</span>
     </script>
 
-     <li data-ng-repeat="item in items"
-         data-ng-class=" item.itemClass || '' "
-         ng-include=" item.itemTemplate || 'navigator-item-template' ">
+    <li data-ng-repeat="item in items"
+        data-ng-class=" item.itemClass || '' "
+        ng-include=" item.itemTemplate || 'navigator-item-template' ">
 
 
-
-     </li>
+    </li>
 </ul>
