--- a/client/ui-components/GMENavigator/templates/GMENavigator.html
+++ b/client/ui-components/GMENavigator/templates/GMENavigator.html
@@ -43,14 +43,15 @@
         </ul>
     </script>
 
-    <script type="text/ng-template" id="branch-selector-template">
-        <span class="item-label">Branch {{item.label}}</span>
-    </script>
+    <!--<script type="text/ng-template" id="branch-selector-template">-->
+        <!--<span class="item-label">Branch {{item.label}}</span>-->
+    <!--</script>-->
 
-    <li data-ng-repeat="item in items track by $index"
+    <li data-ng-repeat-start="item in navigator.items track by $index"
         data-ng-class=" item.itemClass || '' "
         ng-include=" item.itemTemplate || 'navigator-item-template' ">
-
-
+    </li>
+    <li data-ng-repeat-end data-ng-if="navigator.separator && !$last" class="separator">
+        <i class="glyphicon glyphicon-chevron-right"></i>
     </li>
 </ul>
