--- a/client/ui-components/DropDownNavigator/styles/dropDownNavigator.scss
+++ b/client/ui-components/DropDownNavigator/styles/dropDownNavigator.scss
@@ -1,4 +1,4 @@
-ul.gme-navigator {
+ul.drop-down-navigator {
 
   font-size: 130%;
 
@@ -36,7 +36,7 @@ ul.gme-navigator {
     background-color: #EFF5FD;
   }
 
-  ul.gme-navigator {
+  ul.drop-down-navigator {
     display: inline-block;
   }
 
