--- a/client/ui-components/DropDownNavigator/styles/dropDownNavigator.css
+++ b/client/ui-components/DropDownNavigator/styles/dropDownNavigator.css
@@ -1,39 +1,39 @@
-ul.gme-navigator {
+ul.drop-down-navigator {
   font-size: 130%;
   padding: 0;
   list-style-type: none;
   color: #fff; }
-  ul.gme-navigator > li {
+  ul.drop-down-navigator > li {
     display: inline-block;
     padding: .75ex 1em;
     position: relative; }
-    ul.gme-navigator > li > .dropdown-menu {
+    ul.drop-down-navigator > li > .dropdown-menu {
       display: none;
       position: absolute;
       margin-bottom: 5px;
       *width: 180px;
       margin-top: -1px; }
-  ul.gme-navigator > li:hover {
+  ul.drop-down-navigator > li:hover {
     background-color: #00235B;
     cursor: pointer; }
-    ul.gme-navigator > li:hover > .dropdown-menu {
+    ul.drop-down-navigator > li:hover > .dropdown-menu {
       display: block; }
-  ul.gme-navigator li.selected {
+  ul.drop-down-navigator li.selected {
     background-color: #EFF5FD; }
-  ul.gme-navigator ul.gme-navigator {
+  ul.drop-down-navigator ul.drop-down-navigator {
     display: inline-block; }
-  ul.gme-navigator .dropdown-menu {
+  ul.drop-down-navigator .dropdown-menu {
     overflow: visible; }
-  ul.gme-navigator li.dot-dot-dot {
+  ul.drop-down-navigator li.dot-dot-dot {
     color: #777;
     font-weight: bold;
     text-align: center;
     line-height: 1ex;
     padding-bottom: 1ex;
     letter-spacing: .3ex; }
-  ul.gme-navigator .dropdown-submenu {
+  ul.drop-down-navigator .dropdown-submenu {
     position: relative; }
-  ul.gme-navigator .dropdown-submenu > .dropdown-menu {
+  ul.drop-down-navigator .dropdown-submenu > .dropdown-menu {
     top: 0;
     left: 100%;
     margin-top: -6px;
@@ -41,9 +41,9 @@ ul.gme-navigator {
     -webkit-border-radius: 0 6px 6px 6px;
     -moz-border-radius: 0 6px 6px 6px;
     border-radius: 0 6px 6px 6px; }
-  ul.gme-navigator .dropdown-submenu:hover > .dropdown-menu {
+  ul.drop-down-navigator .dropdown-submenu:hover > .dropdown-menu {
     display: block; }
-  ul.gme-navigator .dropdown-submenu > a:after {
+  ul.drop-down-navigator .dropdown-submenu > a:after {
     display: block;
     content: " ";
     float: right;
@@ -55,31 +55,31 @@ ul.gme-navigator {
     border-left-color: #cccccc;
     margin-top: 5px;
     margin-right: -10px; }
-  ul.gme-navigator .dropdown-submenu:hover > a:after {
+  ul.drop-down-navigator .dropdown-submenu:hover > a:after {
     border-left-color: #ffffff; }
-  ul.gme-navigator .disabled.dropdown-submenu:hover > a:after {
+  ul.drop-down-navigator .disabled.dropdown-submenu:hover > a:after {
     border-left-color: #999; }
-  ul.gme-navigator .dropdown-submenu.pull-left {
+  ul.drop-down-navigator .dropdown-submenu.pull-left {
     float: none; }
-  ul.gme-navigator .dropdown-submenu.pull-left > .dropdown-menu {
+  ul.drop-down-navigator .dropdown-submenu.pull-left > .dropdown-menu {
     left: -100%;
     margin-left: 10px;
     -webkit-border-radius: 6px 0 6px 6px;
     -moz-border-radius: 6px 0 6px 6px;
     border-radius: 6px 0 6px 6px; }
-  ul.gme-navigator li.gme-root {
+  ul.drop-down-navigator li.gme-root {
     background-image: url(images/gme-icon.png);
     background-position: 8px 3px;
     background-repeat: no-repeat;
     padding-left: 46px; }
-  ul.gme-navigator li.separator {
+  ul.drop-down-navigator li.separator {
     padding: 0;
     cursor: default;
     font-size: 60%;
     top: -2px;
     position: relative; }
-  ul.gme-navigator li.label {
+  ul.drop-down-navigator li.label {
     color: #bbb;
     text-transform: uppercase; }
-  ul.gme-navigator:hover {
+  ul.drop-down-navigator:hover {
     background-color: transparent; }
