additional option to pull item icon right

--- a/client/ui-components/DropDownNavigator/templates/DropDownNavigator.html
+++ b/client/ui-components/DropDownNavigator/templates/DropDownNavigator.html
@@ -16,8 +16,9 @@
                 <a href="#"
                    data-ng-class="'action-' + item.id"
                    data-ng-click="item.action(item.actionData)">
-                    <i data-ng-if="item.iconClass" data-ng-class="item.iconClass"></i>
+                    <i data-ng-if="item.iconClass && !item.iconPullRight" data-ng-class="item.iconClass"></i>
                     {{item.label}}
+                    <i data-ng-if="item.iconClass && item.iconPullRight" data-ng-class="item.iconClass"></i>
                 </a>
                 <ul class="dropdown-menu"
                     role="menu"
