--- a/client/css/webgme_bootstrap_overrides.css
+++ b/client/css/webgme_bootstrap_overrides.css
@@ -299,3 +299,7 @@ input.no-focus-collapse:not(:focus) {
     -o-transform:scaleX(-1);
     transform:scaleX(-1);
 }
+
+.panel-base .drawing-canvas {
+    padding: 0;
+}
