--- a/src/client/decorators/MetaDecorator/DiagramDesigner/styles/MetaDecorator.DiagramDesignerWidget.css
+++ b/src/client/decorators/MetaDecorator/DiagramDesigner/styles/MetaDecorator.DiagramDesignerWidget.css
@@ -1,56 +1,125 @@
-/*
-Syntax error: File to import not found or unreadable: ../../../../scss/Widgets/DiagramDesigner/Connector.
-              Load path: /Volumes/Projects/webgme/webgme/client/decorators/MetaDecorator/DiagramDesigner/styles (DEPRECATED)
-        on line 1 of MetaDecorator.DiagramDesignerWidget.scss
+.meta-decorator {
+  min-width: 90px;
+  min-height: 40px;
+  border: 1px solid black;
+  background-color: white;
+  text-align: center; }
+  .meta-decorator .name {
+    white-space: nowrap;
+    font-size: 9px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border-bottom: 1px solid #000000;
+    padding: 0 17px 0 17px; }
+    .meta-decorator .name input {
+      height: 16px !important;
+      line-height: 16px !important;
+      font-size: 11px !important; }
+  .meta-decorator .attributes,
+  .meta-decorator .constraints,
+  .meta-decorator .aspects {
+    font-size: 10px;
+    min-height: 1px;
+    margin-bottom: 0;
+    padding: 0 3px 0 3px; }
+    .meta-decorator .attributes li div,
+    .meta-decorator .constraints li div,
+    .meta-decorator .aspects li div {
+      white-space: nowrap;
+      position: relative;
+      height: 16px;
+      line-height: 16px; }
+      .meta-decorator .attributes li div:hover,
+      .meta-decorator .constraints li div:hover,
+      .meta-decorator .aspects li div:hover {
+        cursor: pointer;
+        background-color: #eeeeee; }
+      .meta-decorator .attributes li div .n,
+      .meta-decorator .constraints li div .n,
+      .meta-decorator .aspects li div .n {
+        float: left;
+        margin-right: 3px;
+        max-width: 90px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-align: left; }
+      .meta-decorator .attributes li div .t,
+      .meta-decorator .constraints li div .t,
+      .meta-decorator .aspects li div .t {
+        float: right;
+        text-align: right; }
+  .meta-decorator .add-new-attribute,
+  .meta-decorator .add-new-constraint,
+  .meta-decorator .add-new-aspect {
+    font-size: 10px;
+    cursor: pointer;
+    position: absolute;
+    top: 0px;
+    left: 3px; }
+    .meta-decorator .add-new-attribute:hover,
+    .meta-decorator .add-new-constraint:hover,
+    .meta-decorator .add-new-aspect:hover {
+      background-color: #dbeafc;
+      color: black; }
+  .meta-decorator .attributes-title,
+  .meta-decorator .constraints-title,
+  .meta-decorator .aspects-title {
+    font-size: 9px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    background-color: #f3f3f3;
+    color: black;
+    line-height: 13px;
+    position: relative; }
+  .meta-decorator .constraints-title,
+  .meta-decorator .aspects-title {
+    border-top: 1px dashed #999999; }
+  .meta-decorator input[type=text].new-attr {
+    font-size: 10px; }
+  .meta-decorator .control-group {
+    margin-bottom: 0; }
+  .meta-decorator .connector {
+    background-color: #fefefe;
+    height: 10px;
+    width: 10px;
+    position: absolute;
+    cursor: pointer;
+    border: 1px solid blue;
+    z-index: 10;
+    margin-left: -6px;
+    left: 50%; }
+    .meta-decorator .connector:hover {
+      border-color: rgba(82, 168, 236, 0.8);
+      -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
+    .meta-decorator .connector.top {
+      top: -6px; }
+    .meta-decorator .connector.bottom {
+      bottom: -6px; }
+  .meta-decorator .text-meta {
+    position: absolute;
+    top: 0;
+    right: 1px;
+    height: 15px;
+    width: 15px;
+    margin-top: 2px;
+    border-radius: 5px; }
+  .meta-decorator.abstract .name {
+    font-style: italic;
+    color: #aaaaaa; }
 
-1: @import "../../../../scss/Widgets/DiagramDesigner/Connector";
-2: 
-3: $min-width: 90px;
-4: $height: 40px;
-5: $border: 1px solid #000000;
-6: $padding: 0 3px 0 3px;
+.selected .meta-decorator .add-new-attribute:hover,
+.selected .meta-decorator .add-new-constraint:hover,
+.selected .meta-decorator .add-new-aspect:hover {
+  background-color: #ffffc0; }
 
-Backtrace:
-MetaDecorator.DiagramDesignerWidget.scss:1
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/import_node.rb:66:in `rescue in import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/import_node.rb:45:in `import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/import_node.rb:28:in `imported_file'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/import_node.rb:37:in `css_import?'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/perform.rb:283:in `visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/stack.rb:121:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/perform.rb:152:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/base.rb:52:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/perform.rb:161:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/perform.rb:160:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/perform.rb:180:in `visit_root'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/perform.rb:151:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/tree/root_node.rb:20:in `render'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/engine.rb:274:in `render'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/plugin/compiler.rb:414:in `update_stylesheet'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/plugin/compiler.rb:189:in `block in update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/plugin/compiler.rb:186:in `each'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/plugin/compiler.rb:186:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/plugin.rb:82:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/exec.rb:489:in `watch_or_update'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/exec.rb:346:in `process_result'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/exec.rb:43:in `parse'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/lib/sass/exec.rb:22:in `parse!'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.3.7/bin/scss:13:in `<top (required)>'
-/usr/bin/scss:23:in `load'
-/usr/bin/scss:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: File to import not found or unreadable: ../../../../scss/Widgets/DiagramDesigner/Connector.\A               Load path: /Volumes/Projects/webgme/webgme/client/decorators/MetaDecorator/DiagramDesigner/styles (DEPRECATED)\A         on line 1 of MetaDecorator.DiagramDesignerWidget.scss\A \A 1: @import \"../../../../scss/Widgets/DiagramDesigner/Connector\";\A 2: \A 3: $min-width: 90px;\A 4: $height: 40px;\A 5: $border: 1px solid #000000;\A 6: $padding: 0 3px 0 3px;"; }
+.items.highlight-mode .meta-decorator .attributes li div:hover,
+.items.highlight-mode .meta-decorator .constraints li div:hover,
+.items.highlight-mode .meta-decorator .aspects li div:hover {
+  cursor: default;
+  background-color: white; }
