--- a/src/client/ui-components/ConfirmDialog/templates/ConfirmDialog.html
+++ b/src/client/ui-components/ConfirmDialog/templates/ConfirmDialog.html
@@ -1,8 +1,7 @@
 <div class="modal-header">
-    <h3 class="modal-title">Delete project</h3>
+    <h3 class="modal-title">{{ dialogTitle }}</h3>
 </div>
-<div class="modal-body">
-    <p>Ate you sure you want to delete <i>{{ projectName }}</i>?</p>
+<div class="modal-body" data-ng-include="dialogContentTemplate">
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">OK</button>
