--- a/src/client/ui-components/HierarchicalDropdown/templates/HierarchicalDropdown.html
+++ b/src/client/ui-components/HierarchicalDropdown/templates/HierarchicalDropdown.html
@@ -14,7 +14,7 @@
                 data-ng-class="{ 'dropdown-submenu':item.menu, 'selected': item.isSelected, 'disabled': item.disabled }">
                 <a href="#"
                    data-ng-class="'action-' + item.id"
-                   data-ng-click="item.action(item.actionData)">
+                   data-ng-click="!item.disabled && item.action(item.actionData)">
                     <i data-ng-if="item.iconClass && !item.iconPullRight" data-ng-class="item.iconClass"></i>
                     {{item.label}}
                     <i data-ng-if="item.iconClass && item.iconPullRight" data-ng-class="item.iconClass"></i>
