item icon styling

--- a/src/client/ui-components/HierarchicalDropdown/styles/hierarchicalDropdown.scss
+++ b/src/client/ui-components/HierarchicalDropdown/styles/hierarchicalDropdown.scss
@@ -27,6 +27,11 @@
       letter-spacing: .3ex;
     }
 
+    li .item-icon {
+      margin-right: .3ex;
+      font-size: 90%;
+    }
+
     .dropdown-submenu {
       position: relative;
     }
