--- a/src/client/ui-components/HierarchicalDropdown/templates/HierarchicalDropdown.html
+++ b/src/client/ui-components/HierarchicalDropdown/templates/HierarchicalDropdown.html
@@ -15,7 +15,7 @@
                 <a href="#"
                    data-ng-class="'action-' + item.id"
                    data-ng-click="!item.disabled && item.action(item.actionData)">
-                    <i data-ng-if="item.iconClass && !item.iconPullRight" data-ng-class="item.iconClass"></i>
+                    <i data-ng-if="item.iconClass && !item.iconPullRight" data-ng-class="item.iconClass" class="item-icon"></i>
                     {{item.label}}
                     <i data-ng-if="item.iconClass && item.iconPullRight" data-ng-class="item.iconClass"></i>
                 </a>
