--- a/src/client/ui-components/HierarchicalDropdown/styles/hierarchicalDropdown.css
+++ b/src/client/ui-components/HierarchicalDropdown/styles/hierarchicalDropdown.css
@@ -16,6 +16,9 @@
     line-height: 1ex;
     padding-bottom: 1ex;
     letter-spacing: .3ex; }
+  .hierarchical-dropdown .dropdown-menu li .item-icon {
+    margin-right: .3ex;
+    font-size: 90%; }
   .hierarchical-dropdown .dropdown-menu .dropdown-submenu {
     position: relative; }
   .hierarchical-dropdown .dropdown-menu .dropdown-submenu > .dropdown-menu {
