--- a/src/client/js/Dialogs/ConstraintCheckResults/styles/ConstraintCheckResultsDialog.scss
+++ b/src/client/js/Dialogs/ConstraintCheckResults/styles/ConstraintCheckResultsDialog.scss
@@ -6,7 +6,7 @@
 
 .constraint-check-results-dialog {
   .modal-body {
-    div.plugin-result {
+    div.constraint-check-result {
       padding: 3px;
       margin-bottom: 10px;
       background-color: #f5f5f5;
@@ -50,22 +50,6 @@
 
           }
         }
-      }
-
-      .artifacts {
-          margin-bottom: 5px;
-
-          .artifacts-title {
-            margin-top: 5px;
-            font-weight: bold;
-            text-transform: uppercase;
-            color: #999999;
-            border-bottom: 1px solid #999999;
-          }
-
-          .artifacts-body {
-
-          }
       }
     }
   }
