--- a/src/client/isis-ui-components/dropdownNavigator/templates/dropdownNavigator.html
+++ b/src/client/isis-ui-components/dropdownNavigator/templates/dropdownNavigator.html
@@ -1,4 +1,4 @@
-<ul class="drop-down-navigator">
+<ul class="dropdown-navigator">
 
 
     <script type="text/ng-template" id="navigator-item-template">
