--- a/src/client/isis-ui-components/dropdownNavigator/styles/dropdownNavigator.scss
+++ b/src/client/isis-ui-components/dropdownNavigator/styles/dropdownNavigator.scss
@@ -8,7 +8,8 @@ ul.dropdown-navigator {
 
   > li {
     display: inline-block;
-    padding: .75ex 1em;
+    padding: 0 1em;
+    line-height: 2.22em;
 
     position: relative;
 
@@ -49,6 +50,7 @@ ul.dropdown-navigator {
     font-size: 60%;
     top: -2px;
     position: relative;
+    margin: 0 .75ex;
   }
 
 
