--- a/src/client/isis-ui-components/dropdownNavigator/templates/dropdownNavigator.html
+++ b/src/client/isis-ui-components/dropdownNavigator/templates/dropdownNavigator.html
@@ -1,15 +1,15 @@
 <ul class="dropdown-navigator">
-
-
     <script type="text/ng-template" id="navigator-item-template">
-        <span class="item-label">{{item.label}}</span>
+        <div class="label-container" data-ng-click="!item.disabled && item.action(item.actionData, $event)">
+            <span class="item-label">{{item.label}}</span>
+        </div>
         <hierarchical-dropdown menu="item.menu"></hierarchical-dropdown>
     </script>
 
     <li data-ng-repeat-start="item in navigator.items track by $index"
         data-ng-class=" item.itemClass || '' "
         ng-include=" item.itemTemplate || 'navigator-item-template' "
-        data-ng-click="!item.disabled && item.action(item.actionData)" role="button">
+        role="button">
     </li><li data-ng-repeat-end data-ng-if="navigator.separator && !$last" class="separator">
         <i class="glyphicon glyphicon-chevron-right"></i>
     </li>
