--- a/src/client/isis-ui-components/hierarchicalMenu/templates/hierarchicalMenu.html
+++ b/src/client/isis-ui-components/hierarchicalMenu/templates/hierarchicalMenu.html
@@ -42,9 +42,8 @@
 
     </script>
 
-    <ul class="dropdown-menu"
+    <ul class="menu-contents"
         role="menu"
-        aria-labelledby="dropdownMenu"
         data-ng-if="menu"
         ng-include="'menu-items'">
     </ul>
