--- a/src/client/isis-ui-components/dropdownNavigator/styles/dropdownNavigator.css
+++ b/src/client/isis-ui-components/dropdownNavigator/styles/dropdownNavigator.css
@@ -8,7 +8,7 @@ ul.dropdown-navigator {
     padding: 0;
     line-height: 2.22em;
     position: relative; }
-    ul.dropdown-navigator > li > .hierarchical-dropdown {
+    ul.dropdown-navigator > li > .hierarchical-menu {
       display: none; }
     ul.dropdown-navigator > li .label-container {
       height: 100%;
@@ -16,7 +16,7 @@ ul.dropdown-navigator {
   ul.dropdown-navigator > li:not(.separator):hover {
     background-color: #00235B;
     cursor: pointer; }
-    ul.dropdown-navigator > li:not(.separator):hover > .hierarchical-dropdown {
+    ul.dropdown-navigator > li:not(.separator):hover > .hierarchical-menu {
       display: block; }
   ul.dropdown-navigator li.selected {
     background-color: #EFF5FD; }
