--- a/src/client/isis-ui-components/hierarchicalMenu/templates/hierarchicalMenu.html
+++ b/src/client/isis-ui-components/hierarchicalMenu/templates/hierarchicalMenu.html
@@ -1,4 +1,4 @@
-<div class="hierarchical-dropdown">
+<div class="hierarchical-menu">
     <script type="text/ng-template" id="menu-items">
 
         <div data-ng-repeat-start="menuItemGroup in menu" data-ng-if="false"></div>
