--- a/src/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.css
+++ b/src/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.css
@@ -55,3 +55,27 @@
       -ms-transform: scaleX(-1);
       -o-transform: scaleX(-1);
       transform: scaleX(-1); }
+
+.designer-item .svg-decorator .svg-content svg {
+  border: none; }
+  .designer-item .svg-decorator .svg-content svg .connector {
+    fill: #fefefe;
+    stroke: blue;
+    stroke-width: 1px; }
+    .designer-item .svg-decorator .svg-content svg .connector:hover {
+      stroke: rgba(82, 168, 236, 0.8); }
+.designer-item .svg-decorator .connector {
+  background-color: #fefefe;
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  cursor: pointer;
+  border: 1px solid blue;
+  z-index: 10;
+  margin-left: -6px;
+  margin-top: -6px; }
+  .designer-item .svg-decorator .connector:hover {
+    border-color: rgba(82, 168, 236, 0.8);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
