--- a/src/client/js/Widgets/SnapEditor/styles/SnapEditorWidget.DecoratorBase.ConnectionArea.css
+++ b/src/client/js/Widgets/SnapEditor/styles/SnapEditorWidget.DecoratorBase.ConnectionArea.css
@@ -3,21 +3,13 @@
  * 
  * Author: Robert Kereskenyi
  */
-.snappable-item .decorator-edit {
-  opacity: 0.2; }
-.snappable-item .conn-area-edit-bg {
+.linkable-item .conn-area {
   position: absolute;
   top: 0;
   left: 0; }
-.snappable-item path.conn-area-edit {
+.linkable-item path.conn-area-line {
   position: absolute;
   top: 0;
   left: 0;
   opacity: 0.5;
-  stroke: lime; }
-  .snappable-item path.conn-area-edit:hover {
-    stroke: #009900; }
-  .snappable-item path.conn-area-edit.disabled {
-    stroke: red; }
-    .snappable-item path.conn-area-edit.disabled:hover {
-      stroke: #990000; }
+  stroke: #555555; }
